Code/syntax.output
Grammar

    0 $accept: Program $end

    1 Program: ExtDefList

    2 ExtDefList: %empty
    3           | ExtDef ExtDefList

    4 ExtDef: Specifier ExtDecList ";"
    5       | Specifier ";"
    6       | error ";"
    7       | Specifier FunDec CompSt
    8       | error FunDec CompSt

    9 ExtDecList: VarDec
   10           | VarDec "," ExtDecList

   11 Specifier: TYPE
   12          | StructSpecifier

   13 StructSpecifier: STRUCT OptTag "{" DefList "}"
   14                | STRUCT OptTag "{" error "}"
   15                | STRUCT Tag

   16 OptTag: %empty
   17       | ID

   18 Tag: ID

   19 VarDec: ID
   20       | VarDec "[" "int" "]"

   21 FunDec: ID "(" VarList ")"
   22       | ID "(" error ")"
   23       | ID "(" ")"
   24       | error ")"

   25 VarList: ParamDec "," VarList
   26        | ParamDec

   27 ParamDec: Specifier VarDec

   28 CompSt: "{" DefList StmtList "}"
   29       | error "}"

   30 StmtList: Stmt StmtList
   31         | %empty

   32 Stmt: Exp ";"
   33     | CompSt
   34     | RETURN Exp ";"
   35     | IF "(" Exp ")" Stmt
   36     | IF "(" Exp ")" Stmt ELSE Stmt
   37     | WHILE "(" Exp ")" Stmt
   38     | error ";"
   39     | IF "(" error ")" Stmt
   40     | IF "(" error ")" Stmt ELSE Stmt
   41     | IF "(" Exp ")" error ELSE Stmt
   42     | WHILE "(" error ")" Stmt

   43 DefList: Def DefList
   44        | %empty

   45 Def: Specifier DecList ";"
   46    | Specifier error ";"

   47 DecList: Dec
   48        | Dec "," DecList

   49 Dec: VarDec
   50    | VarDec "=" Exp

   51 Exp: Exp "=" Exp
   52    | Exp "&&" Exp
   53    | Exp "||" Exp
   54    | Exp RELOP Exp
   55    | Exp "+" Exp
   56    | Exp "-" Exp
   57    | Exp "*" Exp
   58    | Exp "/" Exp
   59    | "(" Exp ")"
   60    | "-" Exp
   61    | "!" Exp
   62    | ID "(" Args ")"
   63    | ID "(" ")"
   64    | Exp "[" Exp "]"
   65    | Exp "." ID
   66    | ID
   67    | "int"
   68    | "float"
   69    | "(" error ")"
   70    | "(" error "]"
   71    | "(" error "}"
   72    | "(" error ";"
   73    | ID "(" error ")"
   74    | ID "(" error "]"
   75    | ID "(" error "}"
   76    | ID "(" error ";"
   77    | Exp "[" error "]"
   78    | Exp "[" Exp ")"
   79    | Exp "[" Exp "}"
   80    | Exp "[" Exp ";"

   81 Args: Exp "," Args
   82     | Exp


Terminals, with rules where they appear

    $end (0) 0
    error (256) 6 8 14 22 24 29 38 39 40 41 42 46 69 70 71 72 73 74 75 76 77
    "int" <int_val> (258) 20 67
    "float" <float_val> (259) 68
    "+" (260) 55
    "-" (261) 56 60
    "*" (262) 57
    "/" (263) 58
    ";" (264) 4 5 6 32 34 38 45 46 72 76 80
    "," (265) 10 25 48 81
    "=" (266) 50 51
    RELOP (267) 54
    "&&" (268) 52
    "||" (269) 53
    "." (270) 65
    "!" (271) 61
    TYPE (272) 11
    ID (273) 17 18 19 21 22 23 62 63 65 66 73 74 75 76
    "(" (274) 21 22 23 35 36 37 39 40 41 42 59 62 63 69 70 71 72 73 74 75 76
    ")" (275) 21 22 23 24 35 36 37 39 40 41 42 59 62 63 69 73 78
    "[" (276) 20 64 77 78 79 80
    "]" (277) 20 64 70 74 77
    "{" (278) 13 14 28
    "}" (279) 13 14 28 29 71 75 79
    STRUCT (280) 13 14 15
    IF (281) 35 36 39 40 41
    ELSE (282) 36 40 41
    WHILE (283) 37 42
    RETURN (284) 34
    LOWER_THAN_ELSE (285)


Nonterminals, with rules where they appear

    $accept (31)
        on left: 0
    Program (32)
        on left: 1
        on right: 0
    ExtDefList (33)
        on left: 2 3
        on right: 1 3
    ExtDef (34)
        on left: 4 5 6 7 8
        on right: 3
    ExtDecList (35)
        on left: 9 10
        on right: 4 10
    Specifier (36)
        on left: 11 12
        on right: 4 5 7 27 45 46
    StructSpecifier (37)
        on left: 13 14 15
        on right: 12
    OptTag (38)
        on left: 16 17
        on right: 13 14
    Tag (39)
        on left: 18
        on right: 15
    VarDec (40)
        on left: 19 20
        on right: 9 10 20 27 49 50
    FunDec (41)
        on left: 21 22 23 24
        on right: 7 8
    VarList (42)
        on left: 25 26
        on right: 21 25
    ParamDec (43)
        on left: 27
        on right: 25 26
    CompSt (44)
        on left: 28 29
        on right: 7 8 33
    StmtList (45)
        on left: 30 31
        on right: 28 30
    Stmt (46)
        on left: 32 33 34 35 36 37 38 39 40 41 42
        on right: 30 35 36 37 39 40 41 42
    DefList (47)
        on left: 43 44
        on right: 13 28 43
    Def (48)
        on left: 45 46
        on right: 43
    DecList (49)
        on left: 47 48
        on right: 45 48
    Dec (50)
        on left: 49 50
        on right: 47 48
    Exp (51)
        on left: 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71 72 73 74 75 76 77 78 79 80
        on right: 32 34 35 36 37 41 50 51 52 53 54 55 56 57 58 59 60 61 64 65 77 78 79 80 81 82
    Args (52)
        on left: 81 82
        on right: 62 81


State 0

    0 $accept: . Program $end

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 2 (ExtDefList)

    Program          go to state 4
    ExtDefList       go to state 5
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


State 1

    6 ExtDef: error . ";"
    8       | error . FunDec CompSt

    error  shift, and go to state 9
    ";"    shift, and go to state 10
    ID     shift, and go to state 11

    FunDec  go to state 12


State 2

   11 Specifier: TYPE .

    $default  reduce using rule 11 (Specifier)


State 3

   13 StructSpecifier: STRUCT . OptTag "{" DefList "}"
   14                | STRUCT . OptTag "{" error "}"
   15                | STRUCT . Tag

    ID  shift, and go to state 13

    $default  reduce using rule 16 (OptTag)

    OptTag  go to state 14
    Tag     go to state 15


State 4

    0 $accept: Program . $end

    $end  shift, and go to state 16


State 5

    1 Program: ExtDefList .

    $default  reduce using rule 1 (Program)


State 6

    3 ExtDefList: ExtDef . ExtDefList

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 2 (ExtDefList)

    ExtDefList       go to state 17
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


State 7

    4 ExtDef: Specifier . ExtDecList ";"
    5       | Specifier . ";"
    7       | Specifier . FunDec CompSt

    error  shift, and go to state 9
    ";"    shift, and go to state 18
    ID     shift, and go to state 19

    ExtDecList  go to state 20
    VarDec      go to state 21
    FunDec      go to state 22


State 8

   12 Specifier: StructSpecifier .

    $default  reduce using rule 12 (Specifier)


State 9

   24 FunDec: error . ")"

    ")"  shift, and go to state 23


State 10

    6 ExtDef: error ";" .

    $default  reduce using rule 6 (ExtDef)


State 11

   21 FunDec: ID . "(" VarList ")"
   22       | ID . "(" error ")"
   23       | ID . "(" ")"

    "("  shift, and go to state 24


State 12

    8 ExtDef: error FunDec . CompSt

    error  shift, and go to state 25
    "{"    shift, and go to state 26

    CompSt  go to state 27


State 13

   17 OptTag: ID .
   18 Tag: ID .

    "{"       reduce using rule 17 (OptTag)
    $default  reduce using rule 18 (Tag)


State 14

   13 StructSpecifier: STRUCT OptTag . "{" DefList "}"
   14                | STRUCT OptTag . "{" error "}"

    "{"  shift, and go to state 28


State 15

   15 StructSpecifier: STRUCT Tag .

    $default  reduce using rule 15 (StructSpecifier)


State 16

    0 $accept: Program $end .

    $default  accept


State 17

    3 ExtDefList: ExtDef ExtDefList .

    $default  reduce using rule 3 (ExtDefList)


State 18

    5 ExtDef: Specifier ";" .

    $default  reduce using rule 5 (ExtDef)


State 19

   19 VarDec: ID .
   21 FunDec: ID . "(" VarList ")"
   22       | ID . "(" error ")"
   23       | ID . "(" ")"

    "("  shift, and go to state 24

    $default  reduce using rule 19 (VarDec)


State 20

    4 ExtDef: Specifier ExtDecList . ";"

    ";"  shift, and go to state 29


State 21

    9 ExtDecList: VarDec .
   10           | VarDec . "," ExtDecList
   20 VarDec: VarDec . "[" "int" "]"

    ","  shift, and go to state 30
    "["  shift, and go to state 31

    $default  reduce using rule 9 (ExtDecList)


State 22

    7 ExtDef: Specifier FunDec . CompSt

    error  shift, and go to state 25
    "{"    shift, and go to state 26

    CompSt  go to state 32


State 23

   24 FunDec: error ")" .

    $default  reduce using rule 24 (FunDec)


State 24

   21 FunDec: ID "(" . VarList ")"
   22       | ID "(" . error ")"
   23       | ID "(" . ")"

    error   shift, and go to state 33
    TYPE    shift, and go to state 2
    ")"     shift, and go to state 34
    STRUCT  shift, and go to state 3

    Specifier        go to state 35
    StructSpecifier  go to state 8
    VarList          go to state 36
    ParamDec         go to state 37


State 25

   29 CompSt: error . "}"

    "}"  shift, and go to state 38


State 26

   28 CompSt: "{" . DefList StmtList "}"

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $default  reduce using rule 44 (DefList)

    Specifier        go to state 39
    StructSpecifier  go to state 8
    DefList          go to state 40
    Def              go to state 41


State 27

    8 ExtDef: error FunDec CompSt .

    $default  reduce using rule 8 (ExtDef)


State 28

   13 StructSpecifier: STRUCT OptTag "{" . DefList "}"
   14                | STRUCT OptTag "{" . error "}"

    error   shift, and go to state 42
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    "}"  reduce using rule 44 (DefList)

    Specifier        go to state 39
    StructSpecifier  go to state 8
    DefList          go to state 43
    Def              go to state 41


State 29

    4 ExtDef: Specifier ExtDecList ";" .

    $default  reduce using rule 4 (ExtDef)


State 30

   10 ExtDecList: VarDec "," . ExtDecList

    ID  shift, and go to state 44

    ExtDecList  go to state 45
    VarDec      go to state 21


State 31

   20 VarDec: VarDec "[" . "int" "]"

    "int"  shift, and go to state 46


State 32

    7 ExtDef: Specifier FunDec CompSt .

    $default  reduce using rule 7 (ExtDef)


State 33

   22 FunDec: ID "(" error . ")"

    ")"  shift, and go to state 47


State 34

   23 FunDec: ID "(" ")" .

    $default  reduce using rule 23 (FunDec)


State 35

   27 ParamDec: Specifier . VarDec

    ID  shift, and go to state 44

    VarDec  go to state 48


State 36

   21 FunDec: ID "(" VarList . ")"

    ")"  shift, and go to state 49


State 37

   25 VarList: ParamDec . "," VarList
   26        | ParamDec .

    ","  shift, and go to state 50

    $default  reduce using rule 26 (VarList)


State 38

   29 CompSt: error "}" .

    $default  reduce using rule 29 (CompSt)


State 39

   45 Def: Specifier . DecList ";"
   46    | Specifier . error ";"

    error  shift, and go to state 51
    ID     shift, and go to state 44

    VarDec   go to state 52
    DecList  go to state 53
    Dec      go to state 54


State 40

   28 CompSt: "{" DefList . StmtList "}"

    error    shift, and go to state 55
    "int"    shift, and go to state 56
    "float"  shift, and go to state 57
    "-"      shift, and go to state 58
    "!"      shift, and go to state 59
    ID       shift, and go to state 60
    "("      shift, and go to state 61
    "{"      shift, and go to state 26
    IF       shift, and go to state 62
    WHILE    shift, and go to state 63
    RETURN   shift, and go to state 64

    "}"  reduce using rule 31 (StmtList)

    CompSt    go to state 65
    StmtList  go to state 66
    Stmt      go to state 67
    Exp       go to state 68


State 41

   43 DefList: Def . DefList

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $default  reduce using rule 44 (DefList)

    Specifier        go to state 39
    StructSpecifier  go to state 8
    DefList          go to state 69
    Def              go to state 41


State 42

   14 StructSpecifier: STRUCT OptTag "{" error . "}"

    "}"  shift, and go to state 70


State 43

   13 StructSpecifier: STRUCT OptTag "{" DefList . "}"

    "}"  shift, and go to state 71


State 44

   19 VarDec: ID .

    $default  reduce using rule 19 (VarDec)


State 45

   10 ExtDecList: VarDec "," ExtDecList .

    $default  reduce using rule 10 (ExtDecList)


State 46

   20 VarDec: VarDec "[" "int" . "]"

    "]"  shift, and go to state 72


State 47

   22 FunDec: ID "(" error ")" .

    $default  reduce using rule 22 (FunDec)


State 48

   20 VarDec: VarDec . "[" "int" "]"
   27 ParamDec: Specifier VarDec .

    "["  shift, and go to state 31

    $default  reduce using rule 27 (ParamDec)


State 49

   21 FunDec: ID "(" VarList ")" .

    $default  reduce using rule 21 (FunDec)


State 50

   25 VarList: ParamDec "," . VarList

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    Specifier        go to state 35
    StructSpecifier  go to state 8
    VarList          go to state 73
    ParamDec         go to state 37


State 51

   46 Def: Specifier error . ";"

    ";"  shift, and go to state 74


State 52

   20 VarDec: VarDec . "[" "int" "]"
   49 Dec: VarDec .
   50    | VarDec . "=" Exp

    "="  shift, and go to state 75
    "["  shift, and go to state 31

    $default  reduce using rule 49 (Dec)


State 53

   45 Def: Specifier DecList . ";"

    ";"  shift, and go to state 76


State 54

   47 DecList: Dec .
   48        | Dec . "," DecList

    ","  shift, and go to state 77

    $default  reduce using rule 47 (DecList)


State 55

   29 CompSt: error . "}"
   38 Stmt: error . ";"

    ";"  shift, and go to state 78
    "}"  shift, and go to state 38


State 56

   67 Exp: "int" .

    $default  reduce using rule 67 (Exp)


State 57

   68 Exp: "float" .

    $default  reduce using rule 68 (Exp)


State 58

   60 Exp: "-" . Exp

    "int"    shift, and go to state 56
    "float"  shift, and go to state 57
    "-"      shift, and go to state 58
    "!"      shift, and go to state 59
    ID       shift, and go to state 60
    "("      shift, and go to state 61

    Exp  go to state 79


State 59

   61 Exp: "!" . Exp

    "int"    shift, and go to state 56
    "float"  shift, and go to state 57
    "-"      shift, and go to state 58
    "!"      shift, and go to state 59
    ID       shift, and go to state 60
    "("      shift, and go to state 61

    Exp  go to state 80


State 60

   62 Exp: ID . "(" Args ")"
   63    | ID . "(" ")"
   66    | ID .
   73    | ID . "(" error ")"
   74    | ID . "(" error "]"
   75    | ID . "(" error "}"
   76    | ID . "(" error ";"

    "("  shift, and go to state 81

    $default  reduce using rule 66 (Exp)


State 61

   59 Exp: "(" . Exp ")"
   69    | "(" . error ")"
   70    | "(" . error "]"
   71    | "(" . error "}"
   72    | "(" . error ";"

    error    shift, and go to state 82
    "int"    shift, and go to state 56
    "float"  shift, and go to state 57
    "-"      shift, and go to state 58
    "!"      shift, and go to state 59
    ID       shift, and go to state 60
    "("      shift, and go to state 61

    Exp  go to state 83


State 62

   35 Stmt: IF . "(" Exp ")" Stmt
   36     | IF . "(" Exp ")" Stmt ELSE Stmt
   39     | IF . "(" error ")" Stmt
   40     | IF . "(" error ")" Stmt ELSE Stmt
   41     | IF . "(" Exp ")" error ELSE Stmt

    "("  shift, and go to state 84


State 63

   37 Stmt: WHILE . "(" Exp ")" Stmt
   42     | WHILE . "(" error ")" Stmt

    "("  shift, and go to state 85


State 64

   34 Stmt: RETURN . Exp ";"

    "int"    shift, and go to state 56
    "float"  shift, and go to state 57
    "-"      shift, and go to state 58
    "!"      shift, and go to state 59
    ID       shift, and go to state 60
    "("      shift, and go to state 61

    Exp  go to state 86


State 65

   33 Stmt: CompSt .

    $default  reduce using rule 33 (Stmt)


State 66

   28 CompSt: "{" DefList StmtList . "}"

    "}"  shift, and go to state 87


State 67

   30 StmtList: Stmt . StmtList

    error    shift, and go to state 55
    "int"    shift, and go to state 56
    "float"  shift, and go to state 57
    "-"      shift, and go to state 58
    "!"      shift, and go to state 59
    ID       shift, and go to state 60
    "("      shift, and go to state 61
    "{"      shift, and go to state 26
    IF       shift, and go to state 62
    WHILE    shift, and go to state 63
    RETURN   shift, and go to state 64

    "}"  reduce using rule 31 (StmtList)

    CompSt    go to state 65
    StmtList  go to state 88
    Stmt      go to state 67
    Exp       go to state 68


State 68

   32 Stmt: Exp . ";"
   51 Exp: Exp . "=" Exp
   52    | Exp . "&&" Exp
   53    | Exp . "||" Exp
   54    | Exp . RELOP Exp
   55    | Exp . "+" Exp
   56    | Exp . "-" Exp
   57    | Exp . "*" Exp
   58    | Exp . "/" Exp
   64    | Exp . "[" Exp "]"
   65    | Exp . "." ID
   77    | Exp . "[" error "]"
   78    | Exp . "[" Exp ")"
   79    | Exp . "[" Exp "}"
   80    | Exp . "[" Exp ";"

    "+"    shift, and go to state 89
    "-"    shift, and go to state 90
    "*"    shift, and go to state 91
    "/"    shift, and go to state 92
    ";"    shift, and go to state 93
    "="    shift, and go to state 94
    RELOP  shift, and go to state 95
    "&&"   shift, and go to state 96
    "||"   shift, and go to state 97
    "."    shift, and go to state 98
    "["    shift, and go to state 99


State 69

   43 DefList: Def DefList .

    $default  reduce using rule 43 (DefList)


State 70

   14 StructSpecifier: STRUCT OptTag "{" error "}" .

    $default  reduce using rule 14 (StructSpecifier)


State 71

   13 StructSpecifier: STRUCT OptTag "{" DefList "}" .

    $default  reduce using rule 13 (StructSpecifier)


State 72

   20 VarDec: VarDec "[" "int" "]" .

    $default  reduce using rule 20 (VarDec)


State 73

   25 VarList: ParamDec "," VarList .

    $default  reduce using rule 25 (VarList)


State 74

   46 Def: Specifier error ";" .

    $default  reduce using rule 46 (Def)


State 75

   50 Dec: VarDec "=" . Exp

    "int"    shift, and go to state 56
    "float"  shift, and go to state 57
    "-"      shift, and go to state 58
    "!"      shift, and go to state 59
    ID       shift, and go to state 60
    "("      shift, and go to state 61

    Exp  go to state 100


State 76

   45 Def: Specifier DecList ";" .

    $default  reduce using rule 45 (Def)


State 77

   48 DecList: Dec "," . DecList

    ID  shift, and go to state 44

    VarDec   go to state 52
    DecList  go to state 101
    Dec      go to state 54


State 78

   38 Stmt: error ";" .

    $default  reduce using rule 38 (Stmt)


State 79

   51 Exp: Exp . "=" Exp
   52    | Exp . "&&" Exp
   53    | Exp . "||" Exp
   54    | Exp . RELOP Exp
   55    | Exp . "+" Exp
   56    | Exp . "-" Exp
   57    | Exp . "*" Exp
   58    | Exp . "/" Exp
   60    | "-" Exp .
   64    | Exp . "[" Exp "]"
   65    | Exp . "." ID
   77    | Exp . "[" error "]"
   78    | Exp . "[" Exp ")"
   79    | Exp . "[" Exp "}"
   80    | Exp . "[" Exp ";"

    "*"  shift, and go to state 91
    "/"  shift, and go to state 92
    "."  shift, and go to state 98
    "["  shift, and go to state 99

    $default  reduce using rule 60 (Exp)


State 80

   51 Exp: Exp . "=" Exp
   52    | Exp . "&&" Exp
   53    | Exp . "||" Exp
   54    | Exp . RELOP Exp
   55    | Exp . "+" Exp
   56    | Exp . "-" Exp
   57    | Exp . "*" Exp
   58    | Exp . "/" Exp
   61    | "!" Exp .
   64    | Exp . "[" Exp "]"
   65    | Exp . "." ID
   77    | Exp . "[" error "]"
   78    | Exp . "[" Exp ")"
   79    | Exp . "[" Exp "}"
   80    | Exp . "[" Exp ";"

    "."  shift, and go to state 98
    "["  shift, and go to state 99

    $default  reduce using rule 61 (Exp)


State 81

   62 Exp: ID "(" . Args ")"
   63    | ID "(" . ")"
   73    | ID "(" . error ")"
   74    | ID "(" . error "]"
   75    | ID "(" . error "}"
   76    | ID "(" . error ";"

    error    shift, and go to state 102
    "int"    shift, and go to state 56
    "float"  shift, and go to state 57
    "-"      shift, and go to state 58
    "!"      shift, and go to state 59
    ID       shift, and go to state 60
    "("      shift, and go to state 61
    ")"      shift, and go to state 103

    Exp   go to state 104
    Args  go to state 105


State 82

   69 Exp: "(" error . ")"
   70    | "(" error . "]"
   71    | "(" error . "}"
   72    | "(" error . ";"

    ";"  shift, and go to state 106
    ")"  shift, and go to state 107
    "]"  shift, and go to state 108
    "}"  shift, and go to state 109


State 83

   51 Exp: Exp . "=" Exp
   52    | Exp . "&&" Exp
   53    | Exp . "||" Exp
   54    | Exp . RELOP Exp
   55    | Exp . "+" Exp
   56    | Exp . "-" Exp
   57    | Exp . "*" Exp
   58    | Exp . "/" Exp
   59    | "(" Exp . ")"
   64    | Exp . "[" Exp "]"
   65    | Exp . "." ID
   77    | Exp . "[" error "]"
   78    | Exp . "[" Exp ")"
   79    | Exp . "[" Exp "}"
   80    | Exp . "[" Exp ";"

    "+"    shift, and go to state 89
    "-"    shift, and go to state 90
    "*"    shift, and go to state 91
    "/"    shift, and go to state 92
    "="    shift, and go to state 94
    RELOP  shift, and go to state 95
    "&&"   shift, and go to state 96
    "||"   shift, and go to state 97
    "."    shift, and go to state 98
    ")"    shift, and go to state 110
    "["    shift, and go to state 99


State 84

   35 Stmt: IF "(" . Exp ")" Stmt
   36     | IF "(" . Exp ")" Stmt ELSE Stmt
   39     | IF "(" . error ")" Stmt
   40     | IF "(" . error ")" Stmt ELSE Stmt
   41     | IF "(" . Exp ")" error ELSE Stmt

    error    shift, and go to state 111
    "int"    shift, and go to state 56
    "float"  shift, and go to state 57
    "-"      shift, and go to state 58
    "!"      shift, and go to state 59
    ID       shift, and go to state 60
    "("      shift, and go to state 61

    Exp  go to state 112


State 85

   37 Stmt: WHILE "(" . Exp ")" Stmt
   42     | WHILE "(" . error ")" Stmt

    error    shift, and go to state 113
    "int"    shift, and go to state 56
    "float"  shift, and go to state 57
    "-"      shift, and go to state 58
    "!"      shift, and go to state 59
    ID       shift, and go to state 60
    "("      shift, and go to state 61

    Exp  go to state 114


State 86

   34 Stmt: RETURN Exp . ";"
   51 Exp: Exp . "=" Exp
   52    | Exp . "&&" Exp
   53    | Exp . "||" Exp
   54    | Exp . RELOP Exp
   55    | Exp . "+" Exp
   56    | Exp . "-" Exp
   57    | Exp . "*" Exp
   58    | Exp . "/" Exp
   64    | Exp . "[" Exp "]"
   65    | Exp . "." ID
   77    | Exp . "[" error "]"
   78    | Exp . "[" Exp ")"
   79    | Exp . "[" Exp "}"
   80    | Exp . "[" Exp ";"

    "+"    shift, and go to state 89
    "-"    shift, and go to state 90
    "*"    shift, and go to state 91
    "/"    shift, and go to state 92
    ";"    shift, and go to state 115
    "="    shift, and go to state 94
    RELOP  shift, and go to state 95
    "&&"   shift, and go to state 96
    "||"   shift, and go to state 97
    "."    shift, and go to state 98
    "["    shift, and go to state 99


State 87

   28 CompSt: "{" DefList StmtList "}" .

    $default  reduce using rule 28 (CompSt)


State 88

   30 StmtList: Stmt StmtList .

    $default  reduce using rule 30 (StmtList)


State 89

   55 Exp: Exp "+" . Exp

    "int"    shift, and go to state 56
    "float"  shift, and go to state 57
    "-"      shift, and go to state 58
    "!"      shift, and go to state 59
    ID       shift, and go to state 60
    "("      shift, and go to state 61

    Exp  go to state 116


State 90

   56 Exp: Exp "-" . Exp

    "int"    shift, and go to state 56
    "float"  shift, and go to state 57
    "-"      shift, and go to state 58
    "!"      shift, and go to state 59
    ID       shift, and go to state 60
    "("      shift, and go to state 61

    Exp  go to state 117


State 91

   57 Exp: Exp "*" . Exp

    "int"    shift, and go to state 56
    "float"  shift, and go to state 57
    "-"      shift, and go to state 58
    "!"      shift, and go to state 59
    ID       shift, and go to state 60
    "("      shift, and go to state 61

    Exp  go to state 118


State 92

   58 Exp: Exp "/" . Exp

    "int"    shift, and go to state 56
    "float"  shift, and go to state 57
    "-"      shift, and go to state 58
    "!"      shift, and go to state 59
    ID       shift, and go to state 60
    "("      shift, and go to state 61

    Exp  go to state 119


State 93

   32 Stmt: Exp ";" .
